--- a/assets/css/style-settings-page.css
+++ b/assets/css/style-settings-page.css
@@ -126,11 +126,11 @@ input[type="checkbox"] {
     margin-right: 10px;
     margin-top: 20px!important;
 }
-.restare-mono-pay-image-preview img{
+.mono-pay-image-preview img{
     max-height: 50px;
     width: auto;
 }
-#restare_mono_pay_part_available_parts{
+#mono_pay_part_available_parts{
     margin-bottom: 0;
 }
 .description code{
