Change naming entirely

--- a/assets/css/style-admin.css
+++ b/assets/css/style-admin.css
@@ -14,14 +14,14 @@
     display: none;
 }
 
-.mono-part-pay-data {
+.mono-hire-purchase-data {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 30px;
     margin-bottom: 30px;
 }
 @media screen and (min-width: 1921px){
-    .mono-part-pay-data{
+    .mono-hire-purchase-data{
         max-width: 77%;
     }
 }
@@ -74,7 +74,7 @@ p.mono-error {
     color: #144e0f;
 }
 
-.mono-part-pay-data h3 {
+.mono-hire-purchase-data h3 {
     color: #aaa;
     display: flex;
     gap: 1ch;
@@ -82,14 +82,14 @@ p.mono-error {
     align-items: center;
 }
 
-.mono-part-pay-data p {
+.mono-hire-purchase-data p {
     font-weight: bold;
     display: flex;
     justify-content: space-between;
     gap: 20px;
 }
 
-.mono-part-pay-data p span {
+.mono-hire-purchase-data p span {
     font-weight: normal;
 }
 @keyframes blink {
@@ -107,19 +107,19 @@ p.mono-error {
 }
 
 /* todo finish styilang different states of application*/
-/* .mono-part-pay-data h3:after {
+/* .mono-hire-purchase-data h3:after {
     font-family: dashicons;
     font-size: 1.5em;
     content: "\f321";
     color: #aaa;
 }
 
-.mono-part-pay-data h3.success:after {
+.mono-hire-purchase-data h3.success:after {
     content: "\f147";
     color: #34BD26;
 }
 
-.mono-part-pay-data h3.fail:after {
+.mono-hire-purchase-data h3.fail:after {
     content: "\f335";
     color: red;
 } */
